[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-nationalgrid"
version = "0.4.0"
description = "Async Python client for National Grid built on aiohttp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Colin Haven", email = "colin@chmail.me"}
    ]
keywords = ["national-grid", "graphql", "aiohttp", "asyncio"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "aiohttp>=3.9",
    "typing-extensions>=4.7",
    "pyjwt[crypto]>=2.8.0",
]

[project.urls]
repository = "https://github.com/virtitnerd/py-nationalgrid"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.13",
    "mypy>=1.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src"]
warn_unused_configs = true

